feat(server): Add periodic system messages, modify local storage interval

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "node": ">=0.8.0"
     },
     "name": "gws-emulator",
-    "url" : "https://github.com/skreis/gws-emulator",
+    "repository" : "https://github.com/skreis/gws-emulator",
+    "readme" : "https://github.com/skreis/gws-emulator/blob/master/README.md",
     "version": "0.1.0"
 }
